--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <style>
+          
         :root {
           --white: #FFFFFF;
           --black: #000000;
@@ -79,6 +80,11 @@
           margin-top: 14px;
           margin-bottom: 30px;
         }
+        @media (max-width: 640px) {
+      .logo {
+        display: block;
+      }
+    }
     
       </style>
     <meta charset="UTF-8">
