--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         :root {
           --white: #FFFFFF;
           --black: #000000;
-          --very-light-pink: #C7C7C7;
+          --very-light-pink: #706969;
           --text-input-field: #F7F7F7;
           --hospital-green: #0c0c0c;
           --sm: 14px;
@@ -105,7 +105,7 @@
           <p class="subtitle">Enter a new password for you account</p>
     
           <form action="/" class="form">
-            <label for="password" class="label">Password</label>
+            <label for="password" class="label">User</label>
             <input type="password" id="password" placeholder="*********" class="input input-paswoord">
     
             <label for="new-password"class="label">Password</label>
